--- a/exercicios/ex026/mq002/estilos/paisagem.css
+++ b/exercicios/ex026/mq002/estilos/paisagem.css
@@ -1,3 +1,9 @@
 @charset "UTF-8";
 
 /* Estilos Para Telas Horizontais */
+ body {
+    background-image: url('../imagens/cev-landscape.jpg'); 
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: left bottom;
+}
