--- a/exercicios/ex026/mq002/estilos/retrato.css
+++ b/exercicios/ex026/mq002/estilos/retrato.css
@@ -1,3 +1,10 @@
 @charset "UTF-8";
 
 /* Estilos para Telas Verticais */
+
+body {
+    background-image: url('../imagens/cev-portrait.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center bottom;
+}
