--- a/exercicios/ex026/mq004/estilos/media-query.css
+++ b/exercicios/ex026/mq004/estilos/media-query.css
@@ -3,5 +3,64 @@
 /* Demais Configurações */
 
 @media print {
+    body {
+        background-image: url('../imagens/back-print.jpg');
+        font-family: 'Courier New', Courier, monospace;
+
+        }
+        
+        main {
+            border: solid black;
+        }
+
+        main::after {
+            content:  'Impressão Feita atavés do site www.cursoemvideo.com';
+            text-decoration: underline;
+        }
+
+        main h1 {
+            text-shadow: none;
+            color: black;
+        }
+
+        img#phone {display:none;}
+        img#tablet {display:none;}
+        img#printer {display:block;}
+        img#desktop {display:none;}
+        img#tv {display:none;}
+    }
+
+
+
+@media screen and (min-width:768px) and (max-width:992px) { /* TABLET */
+    body {
+        background-image: url('../imagens/back-tablet.jpg');}
+        img#phone {display:none;}
+        img#tablet {display:block;}
+        img#printer {display:none;}
+        img#desktop {display:none;}
+        img#tv {display:none;}
+    }
+
+
+@media screen and (min-width:992px) and (max-width:1200px) { /* DESKTOP */
+    body {
+        background-image: url('../imagens/back-pc.jpg');}
+
+        img#phone {display:none;}
+        img#tablet {display:none;}
+        img#printer {display:none;}
+        img#desktop {display:block;}
+        img#tv {display:none;}
+    }   
+
+@media screen and (min-width:1200px){ /* Grandes Telas */
+    body {
+        background-image: url('../imagens/back-tv.jpg');}
+        img#phone {display:none;}
+        img#tablet {display:none;}
+        img#printer {display:none;}
+        img#desktop {display:none;}
+        img#tv {display:block;}
     
-}
+    }
